corrected ifcb 'logo' getting cut off.

--- a/ifcbdb/assets/css/site.css
+++ b/ifcbdb/assets/css/site.css
@@ -14,8 +14,6 @@ body {
 
 .navbar-brand {
     padding: 0 5px;
-    height: 15px;
-    line-height: 15px;
 }
 
 .navbar.scrolling-navbar,
